--- a/style/index.css
+++ b/style/index.css
@@ -26,6 +26,13 @@
 .title{
     border-left: 5px solid rgb(0, 128, 255);
     padding-right: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 140px;
+    justify-content: start;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 1%;
 }
 .table-area{
     padding-top: 5%;
@@ -33,13 +40,9 @@
     margin-left: 10%;
    
 }
+
 #imageShow{
-    border: 1px solid red;
-    height: 100px;
-    width: 100px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    
+    height: 74px;
+    width: 74px;;
+    border-radius: 50%;
 }
